# dreamy-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  deps.json  dreamy-cli-installer.ps1.txt  dreamy-cli-installer.sh.txt  dy.toml  index.html  justfile  oranda.json  repos.json
.github/: dependabot.yml
.github/workflows/: prerelease.yaml  release.yaml  release.yml  web.yaml  web.yml
artifacts/: index.html
book/: 404.html  chapter_1.html  index.html  print.html  searchindex.js  searchindex.json
changelog/: index.html
changelog/v1.0.0/: index.html
changelog/v1.0.1/: index.html
changelog/v1.0.10/: index.html
changelog/v1.0.11/: index.html
changelog/v1.0.12/: index.html
changelog/v1.0.13/: index.html
changelog/v1.0.14/: index.html
changelog/v1.0.15/: index.html
changelog/v1.0.16/: index.html
changelog/v1.0.17/: index.html
changelog/v1.0.18/: index.html
changelog/v1.0.2/: index.html
changelog/v1.0.3/: index.html
changelog/v1.0.4/: index.html
changelog/v1.0.5/: index.html
changelog/v1.0.6/: index.html
changelog/v1.0.7/: index.html
changelog/v1.0.8/: index.html
changelog/v1.0.9/: index.html
changelog/v1.1.0/: index.html
changelog/v1.2.0/: index.html
changelog/v1.2.1/: index.html
changelog/v1.3.0/: index.html
changelog/v1.3.1/: index.html
changelog/v1.4.0/: index.html
changelog/v2.0.0/: index.html
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md
src/: commands.rs  config.rs  html.rs  init.rs  main.rs
src/gh/: mod.rs  remote.rs
src/server/: appstate.rs  auth_state.rs  mod.rs  poll_schedule.rs  poller.rs  repos_route.rs  view_route.rs
templates/: dependencies.html  licenses.html
wix/: main.wxs
