[package]
name = "dy"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/LunchTimeCode/dreamy-cli"
documentation = "https://github.com/LunchTimeCode/dreamy-cli"
homepage = "https://github.com/LunchTimeCode/dreamy-cli"
description = "A cli to work with dependencies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "unstable-doc", "env"] }
serde = "1.0"
serde_json = "1"
serde_derive = "1"
toml = "0.8"
clap-markdown = "0.1.3"
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
colored = "2"