[package]
name = "dreamy-cli"
authors = ["Silen Celeste Locatelli"]
version = "2.0.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/LunchTimeCode/dreamy-cli"
documentation = "https://github.com/LunchTimeCode/dreamy-cli"
homepage = "https://github.com/LunchTimeCode/dreamy-cli"
description = "A cli to work with dependencies"

[[bin]]
name = "dy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "unstable-doc", "env"] }
serde = "1.0"
serde_json = "1"
serde_derive = "1"
toml = "0.8"
clap-markdown = "0.1.3"
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["blocking", "json","native-tls-vendored"], default-features = false}
tokio = { version = "1", features = ["full"] }
colored = "2"
askama = { version = "0.12.1", features = ["serde_json"] }

axum = {version = "0.7.5", features = ["json"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1"
tokio_schedule = "0.3.2"
chrono = "0.4"


[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@lunchtimecode"
# Publish jobs to run in CI
publish-jobs = ["npm"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
# Whether cargo-dist should create a Github Release or use an existing draft
create-release = false

[package.metadata.wix]
upgrade-guid = "25688B1E-471D-4B40-B861-729B52B5E8C5"
path-guid = "C351A336-4918-4E77-8F7C-04CA2C13DFB7"
license = false
eula = false
